--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,13 @@
     background-size: cover, cover;
     height: 40vh;
 }
+
+.btn1{
+    border: 2px solid gray;
+    border-radius: 6px 0 0 6px;
+    border-right: none;
+}
+.btn2{
+    border: 2px solid gray;
+    border-radius: 0 6px 6px 0;
+}
